--- a/Home/styles.css
+++ b/Home/styles.css
@@ -169,31 +169,42 @@ width: 200px;
 }
 
 /* about page */
-
 .about-container {
+  display: flex;
+  margin-bottom: 100px;
+}
+.about-image-container {
+  width: 450px;
+  height: 700px;
+ background-image: url(/images/headshot.jpg);
+ background-repeat: no-repeat;
+ background-position: center;
+ background-size: cover;
+ margin: 0 20px 0 40px;
 
-  width: 800px;
-  height: auto;
-  margin: 50px auto;
-  background-color: #fcbecf;
 }
-.about-one {
-  padding: 50px;
-  display: flex;
+.about-content-container {
+  background: 
+    url(/images/stars.svg) no-repeat top left,
+    url(/images/stars-flip.svg) no-repeat bottom right;
+  background-size: 300px, 200px;
+  margin: -10px 0 0 -10px;
+ 
 }
-.about-one img {
-  width: 400px;
-  height: auto;
-  margin: 5px;
+.about-content{
+  margin: 0 50px;
+
 }
-.about-two {
-  padding: 50px;
-  display: flex;
+.about-content h2 {
+  font-weight: bold;
+  text-align: center;
+  font-size: 38px;
+  padding: 20px;
 }
-.about-two img {
-  width: 400px;
-  height: auto;
-  margin: 5px;
+.about-content p {
+  line-height: 1.5;
+  font-size: 20px;
+  padding: 0 30px;
 }
 
 
@@ -370,36 +381,42 @@ input[type="submit"]:active {
 
 .footer-container {
   background-color: #fcbecf;
-  max-width: 800px;
-  margin: 0 auto;
+  width: auto;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px 0;
-  text-align: center;
+  margin: 0 -10px -10px ;;
+  justify-content: space-between;
 }
 
 .footer h2 {
   color: #e11414;
   font-family: 'Cardo', sans-serif;
   font-size: 28px;
-  margin-bottom: 10px;
+  margin: 30px 0 5px;
+}
+.contact-links {
+  margin: 0 50px;
+  
 }
 
-.contact-links ul,
-.social-media-links ul {
+.contact-links ul{
   list-style-type: none;
-  padding: 0;
+  display: block;
+  line-height: 1.8;
+  margin: 0 0 0 20px;
+}
+
+
+.social-media-links ul {
+  display: flex;
+}
+.social-media-links li{
+  list-style-type: none;
+  padding: 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 0;
-}
+ 
 
-.contact-links li,
-.social-media-links li {
-  margin-right: 15px;
 }
 
 .contact-links a,
@@ -409,15 +426,33 @@ input[type="submit"]:active {
 }
 
 .social-media-links img {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   padding: 5px;
   border-radius: 15%;
 }
+.footer-logo{
+  
+}
+.footer-logo img{
+  margin: 0 50px;
+  width: 250px;
+  height: auto;
+  
+}
 
-footer p {
- text-align: center;
- margin-top: 20px;
+.copyright {
+  background-color: #fcbecf;
+  width: auto;
+  display: block;
+  margin:0 -10px -10px;
+  padding: 10px;
+  
+}
+.copyright p{
+  display: block;
+  text-align: center;
+  
 }
   
   /* Add retro-style icons */
