--- a/Home/styles.css
+++ b/Home/styles.css
@@ -10,6 +10,7 @@
 }
 header {
   margin: 40px 10px 40px 40px;
+  
 }
 h1 {
   display: inline-block;
@@ -21,8 +22,17 @@ h1 a {
   font-family: Theramy, serif;
   letter-spacing: -1px;
   color: #e11414;
+  font-size: 55px;
+}
+
+@media only screen and (max-width: 600px) {
+h1 a {
+  font-size: 9vw;
   
-  font-size: 60px;
+}
+header{
+  margin: auto;
+}
 }
 
 
@@ -30,8 +40,7 @@ h1 a {
 /* CLEAR NAV WITH BUBBLE HOVER */
 
 .sticky-nav {
-  display: inline-block;
-  
+
   float: right;
   margin-top: 62px;
   margin-right: 36px;
@@ -71,6 +80,71 @@ h1 a {
     font-weight:600;
     border-bottom: 1px solid #fcbecf;
   }
+ 
+
+/* mobile menu */
+  .mobile-menu {
+    display: none;
+    position: absolute;
+    top: 55px;
+    right: 38px;
+    height: auto;
+    width: 100px;
+    list-style-type: none;
+    opacity: 60%;
+    background-color: #dedede;
+    border-radius: 20px;
+    border-top-right-radius: 0;
+  }
+  
+  .open .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+   
+  }
+  
+  .mobile-menu li {
+   padding: 10px;
+    margin: 5px;
+    
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: #e11414;
+    opacity: 1;
+    
+  }
+  .mobile-menu li a:hover{
+    font-weight: bold;
+  }
+  .icon {
+    margin: auto 0;
+    display: none;
+    cursor: pointer;
+    font-size: 24px;
+  }
+  
+
+
+  @media only screen and (max-width: 600px) {
+    header nav {
+      display: none;
+    }
+    .sticky-nav {
+
+      float: right;
+      margin: 30px;
+      
+      }
+  
+    .icon {
+      display: block;
+    }
+  }
+
 
 
   /* home hero */
@@ -98,6 +172,7 @@ h1 a {
    /* home story */
 .story-container{
   display: flex;
+  
   justify-content: space-between;
   margin: 20px;
   margin-bottom: 150px;
@@ -131,9 +206,10 @@ background-image: url(/images/raspberry\ cupcake.jpg);
 background-position: center ;
 background-repeat: no-repeat;
 background-size: cover;
+
 }
 .story-right {
-  display: flex; 
+  
   flex-direction: column; 
   align-items: center; 
   text-align: center; 
@@ -142,15 +218,28 @@ background-size: cover;
   align-items: center;
   cursor: pointer;
   background-color: #fcbecf; 
+  font-size: 20px;
   color: black;
   border: none; 
   padding: 20px 30px;
   border-radius: 10px; 
 }
+/* story mobile */
+@media screen and (max-width: 600px) {
+  .story-container{
+  flex-wrap: wrap;
+}
+.story-right{
+  margin: auto;
+}
+}
+
+
 
 /* about page */
 .about-container {
   display: flex;
+  
   margin-bottom: 100px;
 }
 .about-image-container {
@@ -186,7 +275,22 @@ background-size: cover;
   font-size: 20px;
   padding: 0 30px;
 }
-
+/* about mobile */
+@media screen and (max-width: 600px) {
+  .about-image-container{
+    width: 300px;
+    height: 500px;
+    margin: auto;
+  }
+.about-container{
+  flex-wrap: wrap;
+  margin: auto;
+}
+.about-content{
+  margin: auto;
+ 
+}
+}
 
 /* gallery page */
 .gallery {
@@ -269,91 +373,6 @@ background-size: cover;
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* contact page */
-
-.contact-container {
-
-  width: 800px;
-  
-  margin: 50px auto;
-  padding: 25px 0 50px;
-  background-color: #fcbecf;
-}
-
-.contact-container h2 {
-  text-align: center;
-  font-family: 'Cardo', sans-serif;
-  font-size: 42px;
-  color: #e11414;
-
-}
-
-form {
-  max-width: 400px;
-  margin: auto;
-  
-
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
-  color: #2424dd;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: none;
-  border-bottom: 2px solid #fcbecf;
-  background-color: #f8f8f8;
-  color: #2424dd;
-}
-
-textarea {
-  height: 100px;
-}
-
-
-input[type="submit"] {
-  display: block;
-  margin: 0 auto;
-  width: 80px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #e11414;
-  color: #f8f8f8;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  background-position: 0 90%;
-  background-repeat: repeat no-repeat;
-  background-size: 4px 3px;
-  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
-  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;  
-  transition: all 235ms ease-in-out;
-
-}
-
-
-input[type="submit"]:focus {
-  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-}
-
-input[type="submit"]:hover {
-  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
-  transform: translate3d(0, 2px, 0);
-  
-}
-input[type="submit"]:active {
-  transform: translateY(4px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
 
 
 /* Style the footer */
@@ -365,6 +384,8 @@ input[type="submit"]:active {
   display: flex;
   margin: 0 -10px -10px ;;
   justify-content: space-between;
+  
+  flex-wrap: wrap;
 }
 
 .footer h2 {
@@ -373,9 +394,9 @@ input[type="submit"]:active {
   font-size: 28px;
   margin: 30px 0 5px;
 }
-.contact-links {
-  margin: 0 50px;
-  
+.contact-links, .social-media-links {
+  margin: 0 20px;
+  flex-wrap: wrap;
 }
 
 .contact-links ul{
@@ -388,13 +409,13 @@ input[type="submit"]:active {
 
 .social-media-links ul {
   display: flex;
+  
 }
 .social-media-links li{
   list-style-type: none;
   padding: 0 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
+ 
  
 
 }
@@ -412,11 +433,15 @@ input[type="submit"]:active {
   border-radius: 15%;
 }
 .footer-logo{
-  
+ width: 50%;
+ margin: 0px;
+ 
+
 }
 .footer-logo img{
-  margin: 0 50px;
-  width: 250px;
+ 
+  width: 40%;
+  min-width: 150px;
   height: auto;
   
 }
@@ -435,7 +460,6 @@ input[type="submit"]:active {
   
 }
   
-  /* Add retro-style icons */
   .social-media-links img {
     
     transition: filter 0.3s ease-in-out;
@@ -444,3 +468,4 @@ input[type="submit"]:active {
   .social-media-links img:hover {
     background-color: #2424dd;
   }
+
