--- a/Home/styles.css
+++ b/Home/styles.css
@@ -37,17 +37,17 @@ header{
 
 
 
-/* CLEAR NAV WITH BUBBLE HOVER */
+/* Nav Menu with Hover */
 
-.sticky-nav {
+.nav-menu {
 
   float: right;
   margin-top: 62px;
   margin-right: 36px;
   }
   
-  /* Style the navigation links */
-  .sticky-nav nav ul {
+  /* navigation links */
+  .nav-menu nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -55,12 +55,12 @@ header{
     
   }
   
-  .sticky-nav nav ul li {
+  .nav-menu nav ul li {
     float: left;
    padding: 0 4px;
   }
   
-  .sticky-nav nav ul li a {
+  .nav-menu nav ul li a {
     display: block;
     padding: 0 10px;
     font-weight: 400;
@@ -70,13 +70,13 @@ header{
     float: right;
   }
   
-  .sticky-nav nav ul li a:hover {
+  .nav-menu nav ul li a:hover {
     font-weight:600;
     border-bottom: 1px solid #fcbecf;
    
   }
   
-  .sticky-nav nav ul li a.active-link {
+  .nav-menu nav ul li a.active-link {
     font-weight:600;
     border-bottom: 1px solid #fcbecf;
   }
@@ -133,7 +133,7 @@ header{
     header nav {
       display: none;
     }
-    .sticky-nav {
+    .nav-menu {
 
       float: right;
       margin: 30px;
@@ -375,17 +375,18 @@ background-size: cover;
 
 
 
-/* Style the footer */
+/*  footer */
 
 
 .footer-container {
   background-color: #fcbecf;
   width: auto;
+  
   display: flex;
   margin: 0 -10px -10px ;;
   justify-content: space-between;
-  
   flex-wrap: wrap;
+  padding: 10px 50px;
 }
 
 .footer h2 {
@@ -393,9 +394,10 @@ background-size: cover;
   font-family: 'Cardo', sans-serif;
   font-size: 28px;
   margin: 30px 0 5px;
+  
 }
 .contact-links, .social-media-links {
-  margin: 0 20px;
+  margin: 0 10px;
   flex-wrap: wrap;
 }
 
@@ -437,13 +439,14 @@ background-size: cover;
  margin: 0px;
  
 
+
 }
 .footer-logo img{
- 
   width: 40%;
   min-width: 150px;
+  margin: 0px 90px;
   height: auto;
-  
+  float: inline-end;
 }
 
 .copyright {
