--- a/Home/styles.css
+++ b/Home/styles.css
@@ -9,7 +9,7 @@
 
 }
 header {
-  margin: 40px 10px 40px 40px;
+  margin: 40px 10px 20px 40px;
   
 }
 h1 {
@@ -302,17 +302,17 @@ background-size: cover;
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 8px;
+  padding: 15px;
 }
 
 .column {
-  flex: 33.33%;
-  padding: 8px;
+  flex: 25%;
+  padding: 15px;
 }
 
 .image {
   width: 100%;
-  max-height: 200px;
+  max-height: 250px;
   object-fit: cover;
   cursor: pointer;
 }
@@ -321,7 +321,8 @@ background-size: cover;
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   left: 0;
   top: 0;
   width: 100%;
@@ -334,7 +335,7 @@ background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 800px;
+  max-width: 700px;
   margin: auto;
 }
 
@@ -348,7 +349,7 @@ background-size: cover;
   top: 0;
   right: 25px;
   font-size: 35px;
-  color: white;
+  color: #fcbecf;
   cursor: pointer;
 }
 
@@ -360,19 +361,35 @@ background-size: cover;
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: #fcbecf;
   font-weight: bold;
   font-size: 20px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
+.prev{
+  left: 0%;
+}
+.next {
+  right: 0%;
+}
+.close:hover {
+  color: #2424dd;
+}
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #2424dd;
+  opacity: 55%;
+  border-radius: 10px;
 }
-
+/* Gallery Mobile */
+@media screen and (max-width: 600px) {
+  .column{
+    flex: 100%;
+  }
+ 
+} 
 
 
 /*  footer */
